logs/Slang/chapter-6/6.16.8--string_substr.sv.log
name: string_substr
description: string.substr()  tests
should_fail: 0
tags: 6.16.8
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.16.8--string_substr.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.16.8--string_substr.sv:9:14: error: invalid member access for type 'string'
	string b = a.substr(1, 2);
	           ~^~~~~~~
